[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ml-visualization-lib"
version = "0.1.0"
description = "A library for visualizing machine learning concepts and cost functions."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
ipywidgets = "^7.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-cov = "^2.12.0"